--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/JIlyaS/todo-app#readme",
   "dependencies": {
+    "@csstools/normalize.css": "^10.1.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
