--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:5000",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "postcss-normalize": "^9.0.0"
   }
 }
