--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
   },
   "homepage": "https://github.com/JIlyaS/todo-app#readme",
   "dependencies": {
-    "@csstools/normalize.css": "^10.1.0",
-    "@types/react-router-dom": "^5.1.5",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
