--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.7",
     "node-sass": "^4.14.0",
